# scitex-datetime

./: CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-datetime-quality-audit-on-ubuntu-latest.yml
src/scitex_datetime/: __init__.py  _normalize_timestamp.py  _time_stamper.py
src/scitex_datetime/_skills/scitex-datetime/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_datetime/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_datetime/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_datetime/_sphinx_html/.doctrees/api/: scitex_datetime.doctree
src/scitex_datetime/_sphinx_html/_modules/: index.html
src/scitex_datetime/_sphinx_html/_modules/scitex_datetime/: _linspace.html  _normalize_timestamp.html
src/scitex_datetime/_sphinx_html/_sources/: api.rst.txt  index.rst.txt
src/scitex_datetime/_sphinx_html/_sources/api/: scitex_datetime.rst.txt
src/scitex_datetime/_sphinx_html/api/: scitex_datetime.html
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py  test_io_edge.py
tests/scitex_datetime/: test__linspace.py  test__normalize_timestamp.py  test__time_stamper.py
