[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-datetime"
version = "0.2.0"
description = "Datetime helpers (linspace, normalize_timestamp, format helpers) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "datetime", "timestamp", "linspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Tier 1 (hard) — required for every public surface (Python API +
    # Skills) to import out of `pip install scitex-datetime`.
    #   numpy:      _linspace.py top-level `import numpy as np`.
    #   scitex-dev: _normalize_timestamp.py top-level
    #               `from scitex_dev import try_import_optional`, and
    #               provides the linter/audit/skill-install plumbing.
    "numpy",
    "pandas",
    "scitex-dev>=0.11.7",
]

[project.optional-dependencies]
# Tier 2 — `pip install scitex-datetime[all]` enables every
# graceful-degradation feature. Per SK11 (general/05_development_11):
# fragmented extras ([docs], [mcp], [plot], ...) are forbidden — they
# all collapse into [all].
all = [
    # scitex_io.load_configs() — when present, STANDARD_FORMAT picks up
    # CONFIG.FORMATS.TIMESTAMP; when absent, falls back to
    # DEFAULT_FORMAT ("%Y-%m-%d %H:%M:%S"). Imported via
    # try_import_optional in _normalize_timestamp.py.
    "scitex-io",
]
# Tier 3 — maintainer tooling. NOT duplicated against [project.dependencies]
# (pip install -e ".[dev]" walks default deps automatically). Sphinx
# tooling lives here because doc-build is a maintainer concern, not a
# user-facing runtime feature.
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-datetime"
Repository = "https://github.com/ywatanabe1989/scitex-datetime"
Documentation = "https://scitex-datetime.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_datetime = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-datetime = "scitex_datetime"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_datetime"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "apps", "config", "docs", "examples"]
